syntax = "proto3";

package proto;

option go_package = "grpc/proto";

message PingRequest {
}

message PingResponse {
}

message GetStatsRequest {
}

message GetStatsResponse {
  int64 urls = 1;
  int64 users = 2;
}

message GetURLRequest {
  string short_url_id = 1;
}

message GetURLResponse {
  string redirect_to = 1;
}

message GetURLsByUserIDRequest {
}

message ResponseURLs {
  string short_url = 1;
  string base_url = 2;
}

message GetURLsByUserIDResponse {
  repeated ResponseURLs response_urls = 1;
}

message PostURLRequest {
  string base_url = 1;
}

message PostURLResponse {
  string short_url = 1;
}

message PostURLBatch {
  string correlation_id = 1;
  string url = 2;
}

message PostURLBatchRequest {
  repeated PostURLBatch request_urls = 1;
}

message PostURLBatchResponse {
  repeated PostURLBatch response_urls = 1;
}

message DeleteURLBatch {
  repeated string urls = 1;
}

message DeleteURLBatchRequest {
  DeleteURLBatch request_urls = 1;
}

message DeleteURLBatchResponse {
}



service Shortener {
  rpc Ping(PingRequest) returns (PingResponse);
  rpc GetStats(GetStatsRequest) returns (GetStatsResponse);
  rpc GetURL(GetURLRequest) returns (GetURLResponse);
  rpc GetURLsByUserID(GetURLsByUserIDRequest) returns (GetURLsByUserIDResponse);
  rpc PostURL(PostURLRequest) returns (PostURLResponse);
  rpc PostURLBatch(PostURLBatchRequest) returns (PostURLBatchResponse);
  rpc DeleteURLBatch(DeleteURLBatchRequest) returns (DeleteURLBatchResponse);
}